Fix links being the wrong font
Changed App.css so that Secular One font only applies to the footer instead of all body elements. Also changed Course.css so just the course title uses Secular One

--- a/link-organizer/src/App.css
+++ b/link-organizer/src/App.css
@@ -12,10 +12,6 @@ h3 {
     margin-bottom: 50px;
 }
 
-body {
-    font-family: "Secular One";
-}
-
 .center {
     text-align: center;
 }
@@ -57,6 +53,7 @@ body {
 }
 
 #footer {
+    font-family: "Secular One";
     bottom: 0;
     left: 0;
     right: 0;
