--- a/link-organizer/src/Course.css
+++ b/link-organizer/src/Course.css
@@ -6,6 +6,7 @@
 }
 
 .course-title {
+    font-family: "Secular One";
     margin-top: 5%;
     margin-left: 5%;
 }
